# MimicNeoAI

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
FiguresOfPaper/Fig4/Fig4B/.ipynb_checkpoints/: 01-merge_microbial_abundance_by_python-checkpoint.py  02-Fig4B_barplot-checkpoint.R
FiguresOfPaper/Fig4/Fig4B/results/: Response_Non-Response_genus.txt  Response_Non-Response_species.txt  species_top10_matrix.txt
MicrobialAntigenPipeline/: MicrobialAntigen.py  README.md
MicrobialAntigenPipeline/scripts/: MicrobialAbundance.py  MicrobialAntigen_human_start.py  get_data_for_binding_pred.py  hlatyping.py
MicrobialAntigenPipline/: README.md  run.sh
MicrobialAntigenPipline/scripts/: hla_binding_pred.py
NeoantigenPipeline/: Neoantigen.py  README.md
NeoantigenPipeline/scripts/: hla_binding_pred.py  hlatyping.py  wes_human_mutation_calling.py
NeoantigenPipline/: README.md  run.sh
PiplineOfAntigenDetection/MicrobialAntigenPipline/: MicrobialAntigen.py  README.md
PiplineOfAntigenDetection/MicrobialAntigenPipline/.ipynb_checkpoints/: MicrobialAntigen-checkpoint.py  conda_create-checkpoint.sh  run-checkpoint.sh
PiplineOfAntigenDetection/MicrobialAntigenPipline/configures/: MicrobialAntigen_pathes.yaml
PiplineOfAntigenDetection/MicrobialAntigenPipline/configures/.ipynb_checkpoints/: MicrobialAntigen_configure-checkpoint.yaml  (+6 more)
PiplineOfAntigenDetection/MicrobialAntigenPipline/scripts/: MicrobialAntigen_human_start.py  get_data_for_bind_pred.py  get_data_for_blastx.py  get_data_for_pvacbind.py  hla_binding_pred.py  hlatyping.py
PiplineOfAntigenDetection/NeoantigenPipline/: Neoantigen.py  README.md  run.sh
PiplineOfAntigenDetection/NeoantigenPipline/.ipynb_checkpoints/: Neoantigen-checkpoint.py  README-checkpoint.md  conda_create-checkpoint.sh  run-checkpoint.sh
PiplineOfAntigenDetection/NeoantigenPipline/configures/: Neoantigen_configure.yaml
PiplineOfAntigenDetection/NeoantigenPipline/scripts/: annotation.py  hla_binding_pred.py  hlatyping.py  wes_human_mutation_calling.py
PiplineOfAntigenDetection/functions/: im_pred_model.py  im_pred_peptides.py  im_pred_tools.py  pipline_tools.py
PiplineOfAntigenDetection/functions/.ipynb_checkpoints/: fastp-checkpoint.py  pipline_tools-checkpoint.py
configures/: MicrobialAntigen_configure.yaml  MicrobialAntigen_pathes.yaml  Neoantigen_configure.yaml  Neoantigen_pathes.yaml
functions/: fastp.py  im_pred_peptides.py
mimicneoai/: __main__.py  core.py  download_database.py
mimicneoai/configures/: Database_and_Paths.md  configure.yaml  cryptic_configure.yaml  immunogenicity_prediction_configure.yaml  microbial_configure.yaml  mutation_derived_configure.yaml  paths.yaml
mimicneoai/cryptic_pipeline/: README.md  cryptic.py
mimicneoai/cryptic_pipeline/scripts/: 00-QC.py  01-alignment.py  02-lnc_sORF_pipeline.py  03-salmon_quant.py  04-salmon_quant_control.py  05-hla_typing.py  06-sORF-encoded_peptides.py  07-hla_binding_pred.py  07-hla_binding_pred_mimicneoai.py  08-orf_filter.py  08-orf_genome_annotation.py  09-cryptic_epitope_annotation.py  10-cryptic_epitope_immunogenicity_tiering.py
mimicneoai/functions/: fastp.py  hlatyping.py  im_pred_model.py  im_pred_peptides.py  im_pred_tools.py  immunogenicity_runner.py  nodemon_pool.py  pipline_tools.py  utils.py
mimicneoai/functions/binding_prediction/: README.md  VALIDATION_REPORT.md  __init__.py  allele_support.py  nonmutation_workflow.py  qc.py  runner.py  schema.py
mimicneoai/immunogenicity_prediction/: README.md  __init__.py  compute_peptide_features.R  core.py  immunogenicity_prediction.py  model.py  train_immunogenicity.py
mimicneoai/immunogenicity_prediction/benchmark/: README.md  __init__.py  evaluate_predictions.py  metrics.py  train_internal_baseline.py
mimicneoai/microbial_pipeline/: README.md  microbial.py
mimicneoai/microbial_pipeline/scripts/: get_data_for_binding_pred.py  get_data_for_blastx.py  hla_binding_pred.py  hla_binding_pred_mimicneoai.py  microbial_abundance.py  microbial_peptides.py
mimicneoai/mutation_derived_pipeline/: README.md  mutation_derived.py
mimicneoai/mutation_derived_pipeline/scripts/: annotation.py  ensure_calling_bed.py  hla_binding_pred.py  merge_mutect_strelka_vardict.py  run_manta_strelka2.py  run_mutect2.py  run_vardict.py  subset_bam_for_igv.py  variants_calling.py
(+60 files in other folders)
