[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimicneoai"
version = "0.1.0"
description = "MimicNeoAI: An integrated pipeline for identifying microbial, cryptic, and mutation-derived epitopes with molecular mimicry analysis in cancer immunotherapy"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Tao Chen", email = "taochencode@hotmail.com" }]
keywords = [
  "immunology", "immunopeptidomics", "neoantigen", "microbiome",
  "bioinformatics", "cancer", "HLA", "epitope", "pipeline"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]

# Keep core deps minimal; heavy/optional tools go to [project.optional-dependencies]
dependencies = [
  "numpy>=2.0.2",
  "pandas>=2.3.3",
  "pyyaml>=6.0.3",
  "tqdm>=4.67.1",
  "vatools>=5.2.0"
]

[project.urls]
Homepage = "https://github.com/BioStaCs-public/MimicNeoAI/"
Issues = "https://github.com/BioStaCs-public/MimicNeoAI/issues"
Documentation = "https://github.com/BioStaCs-public/MimicNeoAI/blob/main/README.md"

# Console entry points (installed as shell commands)
[project.scripts]
mimicneoai = "mimicneoai.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mimicneoai", "mimicneoai.*"]

# Ship example YAMLs (and any small templates) inside the wheel/sdist
[tool.setuptools.package-data]
mimicneoai = [
  "configures/*.yaml",
  "configures/*.yml"
]
